# ccm-orchestra

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  ccm_smoke.py  claude_coop_manager.py  codex_heartbeat.py  pyproject.toml
ccm_orchestra/: __init__.py  cli.py  heartbeat.py  smoke.py
docs/: claude-codex-frontend-playbook.md  codex-claude-visible-collab-playbook.md
docs/superpowers/plans/: 2026-03-30-ccm-real-wechat-transport.md  2026-04-07-heartbeat-start-status-fix.md  2026-04-08-ccm-heartbeat-exposure.md  2026-04-08-ccm-relay-reliability-and-discoverability.md
docs/superpowers/specs/: 2026-03-30-ccm-real-wechat-transport-design.md  2026-04-08-ccm-heartbeat-exposure-design.md  2026-04-08-ccm-relay-reliability-and-discoverability-design.md
tests/: test_ccm_smoke.py  test_claude_coop_manager.py  test_cli.py  test_codex_heartbeat.py  test_heartbeat.py  test_smoke.py
