[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ccm-orchestra"
version = "0.1.0"
description = "Interactive Claude Code session orchestration for Codex via tmux and kitty."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "lexicalmathical" }]
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
ccm = "ccm_orchestra.cli:main"
codex-heartbeat = "ccm_orchestra.heartbeat:main"
ccm-smoke = "ccm_orchestra.smoke:main"

[tool.setuptools]
packages = ["ccm_orchestra"]

[tool.setuptools.package-dir]
"" = "."
